--- a/public/about.html
+++ b/public/about.html
@@ -3,11 +3,13 @@
 <html>
 
 <head>
-
+    <link rel="stylesheet" href="/css/styles.css">
+    <script src="/js/app.js"></script>
 </head>
 
 <body>
     <h1>About</h1>
+    <img src="/img/Dinosaurs.png">
 </body>
 
 </html>
